# Zwerfafval-Detectie

./: .amlignore  .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  config.yml  model_parameters.json  pyproject.toml
notebooks/: evaluate.ipynb  training_set.ipynb  zwerfafval_dataselectie.ipynb
scripts/: output_image.py  visualize_predictions.py
zwerfafval_detectie/: __init__.py
zwerfafval_detectie/settings/: __init__.py  settings.py  settings_schema.py
zwerfafval_detectie/training_pipeline/: submit_training_pipeline.py
zwerfafval_detectie/training_pipeline/components/: __init__.py  train_model.py
